--- a/restaurant/styles/global.css
+++ b/restaurant/styles/global.css
@@ -18,3 +18,42 @@
     background-color: #333 !important;
     transition: background-color 200ms linear;
 }
+
+.overlayDirection {
+    background-color: black;
+    position: absolute;
+    overflow: hidden;
+    top: 0px;
+    z-index: 20;
+    margin: 0;
+    width: 100%;
+    height: 45vh;
+    opacity: .2;
+    margin: 0;
+    padding: 0;
+  }
+
+  .parallax {
+    /* The image used */
+    background-image: url("https://images.pexels.com/photos/723198/pexels-photo-723198.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+
+    /* Set a specific height */
+    height: 45vh;
+    width:100%;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 110%;
+}
+        
+.backgroundColor {
+    background-color: rgb(236, 236, 236);
+}
+
+.navText {
+    color: rgb(209, 207, 204);
+    font-size: 1.3rem;
+}
