--- a/restaurant_ver01/styles/global.css
+++ b/restaurant_ver01/styles/global.css
@@ -2,6 +2,14 @@ body{
   font-family: 'Roboto Slab', serif;
   background-color: rgba(0, 0, 0, 0.4);
 }
+.main{
+  width:100%;
+  height:100vh;
+}
+
+.width{
+  width:100%;
+}
 
 .height10 {
     height: 30vh;
@@ -26,22 +34,20 @@ body{
 }
 
 li:hover {
-  color: rgb(207, 191, 167);
+  color:black;
+  font-weight: bold;
 }
 
 .overlay {
-  background-color: black;
-  position: absolute;
+  background-color: rgba(0, 0, 0, 0.205);
+  flex:1;
   overflow: hidden;
   top: 4%;
-  z-index: 20;
-  width: 100%;
-  height: 100%;
+  z-index: 3;
+  height:130vh;
   opacity: .3;
 }
-.bg-black{
-  background-color: rgb(0,0,0,);
-}
+
 .white{
   color: rgba(255,255,255,0.8);
   
@@ -51,11 +57,11 @@ li:hover {
   background-color: #fff;
   position: absolute;
   overflow: hidden;
-  top: 40%;
-  margin: 6% 5%;
+  top: 35%;
+  margin: 6% 2%;
   z-index: 20;
-  width: 370px;
-  height: 250px;
+  width: 340px;
+  height: 230px;
   opacity: .3;
   border-radius: 4%;
 }
@@ -63,15 +69,15 @@ li:hover {
 .review {
   text-align: center;
   font-family: 'Roboto Slab', serif;
-  /* color: rgb(209, 207, 204); */
-  color: black;
+  text-shadow: .5px .5px 0 rgba(0,0,0,0.1);
+  color:black;
   position: absolute;
   overflow: hidden;
-  top: 40%;
-  margin: 6% 5%;
+  top: 35%;
+  margin: 6% 2%;
   z-index: 40;
-  width: 370px;
-  height: 250px;
+  width: 340px;
+  height: 230px;
 }
 
 .veryTop{
@@ -104,7 +110,7 @@ li:hover {
 
 .navbar-fixed-top.scrolled {
     background-color: #fff !important;
-    transition: background-color 200ms linear;
+    transition: background-color 500ms linear;
 }
 
 .carouselImg{
@@ -113,20 +119,20 @@ li:hover {
   background-position: 50% 10%;
 }
 .overlayDirection {
-    background-color: black;
+  background-color: rgba(0,0,0,0.5);
     position: absolute;
     overflow: hidden;
     top: 0px;
     z-index: 20;
     margin: 0;
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     opacity: .2;
     margin: 0;
     padding: 0;
   }
   .overlayDirection2 {
-    background-color: black;
+    background-color: rgba(0,0,0,0.5);
     position: absolute;
     overflow: hidden;
     top: 0px;
@@ -139,13 +145,16 @@ li:hover {
     padding: 0;
   }
 
+  nav li a{
+    flex:1;
+  }
 
   .parallax {
     /* The image used */
     background-image: url("https://images.pexels.com/photos/8758/food-dinner-lemon-rice.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 
     /* Set a specific height */
-    height: 70vh;
+    height: 60vh;
     width: 100%;
 
     /* Create the parallax scrolling effect */
@@ -159,6 +168,7 @@ li:hover {
   background-image:
     url("https://images.pexels.com/photos/920570/pexels-photo-920570.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-size: cover;
+  width:150%;
   background-position: 50% 70%;
   background-repeat: no-repeat;
   height: 50vh;
@@ -169,14 +179,15 @@ li:hover {
 }
 
 .fontsize22{
-  font-size:22px;
+  font-size:1.5rem;
   margin-top:3%;
   margin-bottom:1%;
 }
 
 
 .navText {
-    color: rgb(209, 207, 204);
+    color: rgb(209, 208, 204);
+    text-shadow: 1px 1px 0 rgba(0,0,0,0.1);
     font-weight: bold;
 }
 .lunchDinner{
@@ -184,12 +195,12 @@ li:hover {
   margin:4% auto 1% auto; 
   font-size:18px;
 }
-.mr3rem{
-  margin-right: 3rem;
-}
 .mr2rem{
   margin-right: 2rem;
 }
-.mr7rem{
-  margin-right: 7.3rem;
+.mr1rem{
+  margin-right: 1rem;
+}
+.mr6rem{
+  margin-right: 6.8rem;
 }
